[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/hud/hud.gd" id="1_hud"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hud")

[node name="AmmoLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 300.0
offset_bottom = -10.0
grow_vertical = 0
text = "AMMO: 0 / 0"

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -8.0
offset_right = 1.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="Bottom" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = 0.0
offset_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="Left" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -1.0
offset_right = 0.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="Right" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.0
offset_top = -1.0
offset_right = 8.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="Hitmarker" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
modulate = Color(1, 1, 1, 0)
text = "âœ•"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HitmarkerTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = false

[node name="ControlsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -200.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 0
text = "WASD: Move   Space: Jump   Ctrl: Crouch   Shift: Sprint   LMB: Fire   RMB: Aim   R: Reload   F: Melee"
horizontal_alignment = 1
vertical_alignment = 0

[node name="PromptLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -300.0
offset_top = 40.0
offset_right = 300.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 0
text = " "
horizontal_alignment = 1
vertical_alignment = 0

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -32.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "COBRA FPS Feel Kit"
horizontal_alignment = 2
vertical_alignment = 1
mouse_filter = 2

[node name="ModeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -52.0
offset_right = -16.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
text = ""
horizontal_alignment = 2
vertical_alignment = 1
mouse_filter = 2

[node name="ProfileLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 48.0
offset_right = 240.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 0
text = "Profile: Twitchy"

[node name="BlockTint" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.4, 1, 0.1)
mouse_filter = 2
visible = false

[node name="CastTint" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.65, 1.0, 0.0)
mouse_filter = 2

[node name="BlockLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -50.0
grow_vertical = 0
text = "BLOCK"
horizontal_alignment = 0
vertical_alignment = 1
mouse_filter = 2
visible = false

[node name="StatsPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.01
anchor_top = 0.12
anchor_right = 0.3
anchor_bottom = 0.3
grow_horizontal = 2
grow_vertical = 2

[node name="TargetsLabel" type="Label" parent="StatsPanel"]
layout_mode = 2
text = "Targets Hit: 0"

[node name="StreakLabel" type="Label" parent="StatsPanel"]
layout_mode = 2
text = "Best Streak: 0"

[node name="AccuracyLabel" type="Label" parent="StatsPanel"]
layout_mode = 2
text = "Shots: 0  Acc: 0%"
